--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,15 @@
 <html lang="hu">
 
 <head>
+            <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GXGPELXXB"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4GXGPELXXB');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
@@ -9,7 +18,8 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  rel="stylesheet">
-    <title>Tasty Burger</title>
+    <meta name="description" content="Foglalj asztalt telefonon, vagy akár online pár kattintással a TastyBurgerbe! Gyere és kóstold meg a város legjobb burgereit. Ne maradj le, foglalj most!">
+    <title>Kapcsolatfelvétel és rendelés - TastyBurger.hu</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
