--- a/drinks.html
+++ b/drinks.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GXGPELXXB"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4GXGPELXXB');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  rel="stylesheet">
-    <title>Tasty Burger</title>
+    <meta name="description" content="Fedezd fel koktéljainkat! Egyedi ízek, vagány mixek színesítik a feelinget, amelyek garantáltan feldobják a hangulatod is. Kóstolj bele a legjobbakba!">
+    <title>A város legjobb koktéljai - Különleges mixeink - TastyBurger.hu</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -27,10 +37,10 @@
         </div>
     </nav>
         <header> 
-            <h1><img class="icon" src="img/film-movie-icon.png" alt="movie.icon"> „A második felvonás” <img class="icon" src="img/movie-svgrepo-com.png" alt="rolling_1"></h1>
+            <h1><img class="icon" src="img/film-movie-icon.png" alt="favicon"> „A második felvonás” <img class="icon" src="img/movie-svgrepo-com.png" alt="favicon"></h1>
         </header>
          <main>     
-                <h2>Üdv a Tasty Burger!</h2>
+                <h2>Üdv a Tasty Burger-ben!</h2>
                 <p class="intro_text">Éttermünket olyan helynek szánjuk, ahova mi magunk
                     is szívesen beülnénk, ahol mindenki úgy érezheti magát, mintha otthon
                     bulizna a barátaival. Mi gondoskodunk a hozzávalókról, ti csak
@@ -42,13 +52,13 @@
                     <th>Ár</th>
                 </tr>
                 <tr class="menu2"> 
-                    <td>Mia’s Favorite</td>
-                    <td>Absolut Vanilia vodka, Passoa, passion fruit püré, fehércsoki szirup, lime, prosecco – Mia Wallace is ez inná</td>
+                    <td>Mia's Favorite</td>
+                    <td>Absolut Vanilia vodka, Passoa, passion fruit püré, fehércsoki szirup, lime, prosecco - Mia Wallace is ez inná</td>
                     <td class="td3">3.000 Ft</td>
                 </tr>
                 <tr class="menu2">
-                    <td>Vega’s Garden</td>
-                    <td>Hendrick’s gin, Bols Peach likőr, grapefruit tonic, lime, bazsalikom hab</td>
+                    <td>Vega's Garden</td>
+                    <td>Hendrick's gin, Bols Peach likőr, grapefruit tonic, lime, bazsalikom hab</td>
                     <td class="td3">3.500 Ft</td>
                 </tr>
                 <tr class="menu2">
@@ -68,14 +78,14 @@
                 </tr>
                  <tr class="menu2">
                     <td>The Wolf</td>
-                    <td>Hendrick’s Grand Cabaret, Campari, vermut</td>
+                    <td>Hendrick's Grand Cabaret, Campari, vermut</td>
                     <td class="td3">4.800 Ft</td>
                 </tr>
              </table>
                 <h2>Válassz kínálatunkból:</h2>
                 <div class="container">
                         <div class="flex-item">
-                            <h3 class="flex_h3">Mia’s Favorite</h3>
+                            <h3 class="flex_h3">Mia's Favorite</h3>
                             <div class="box">
                             <img class="img_flex" src="img/Mia’s Favorite.jpg" alt="Mia's Shake">
                                 <ul id="section1" class="ul_flex">
@@ -91,11 +101,11 @@
 
                         </div>
                         <div class="flex-item">
-                            <h3 class="flex_h3">Vega’s Garden</h3>
+                            <h3 class="flex_h3">Vega's Garden</h3>
                             <div class="box">
-                            <img class="img_flex" src="img/Vega’s Garden1.jpg" alt="Vincent Shake">
+                            <img class="img_flex" src="img/Vega’s Garden.jpg" alt="Vincent Shake">
                             <ul class="ul_flex">
-                                <li class="menu_li_flex">Hendrick’s gin</li>
+                                <li class="menu_li_flex">Hendrick's gin</li>
                                 <li class="menu_li_flex">Bols Peach likőr</li>
                                 <li class="menu_li_flex">Grapefruit tonic</li>
                                 <li class="menu_li_flex">Lime</li>
@@ -107,7 +117,7 @@
                         <div class="flex-item">
                             <h3 class="flex_h3">The Bonnie Situation</h3>
                             <div class="box">
-                            <img class="img_flex" src="img/The Bonnie Situation_1.jpg" alt="The Bonnie Situation">
+                            <img class="img_flex" src="img/The Bonnie Situation.jpg" alt="The Bonnie Situation">
                             <ul class="ul_flex">
                                 <li class="menu_li_flex">Mezcal</li>
                                 <li class="menu_li_flex">Cointreau</li>
@@ -119,7 +129,7 @@
                         <div class="flex-item">
                             <h3 class="flex_h3">Big Kahuna Break</h3>
                             <div class="box">
-                            <img class="img_flex" src="img/Big Kahuna Break1.jpg" alt="Big Kahuna Shake">
+                            <img class="img_flex" src="img/Big Kahuna Break.jpg" alt="Big Kahuna Shake">
                             <ul class="ul_flex">
                                 <li class="menu_li_flex">Monkey Shoulder whiskey</li>
                                 <li class="menu_li_flex">Pandan szirup</li>
@@ -133,7 +143,7 @@
                         <div class="flex-item">
                             <h3 class="flex_h3">Jack Rabbit Martini</h3>
                             <div class="box">
-                            <img class="img_flex" src="img/Jack Rabbit Martini1.jpg" alt="Jack Rabbit Martini">
+                            <img class="img_flex" src="img/Jack Rabbit Martini.jpg" alt="Jack Rabbit Martini">
                             <ul class="ul_flex">
                                 <li class="menu_li_flex">Bols Marine vodka</li>
                                 <li class="menu_li_flex">Licsi likőr</li>
@@ -146,9 +156,9 @@
                         <div class="flex-item">
                             <h3 class="flex_h3">The Wolf</h3>
                             <div class="box">
-                            <img class="img_flex" src="img/The Wolf1.jpg" alt="The Wolf">
+                            <img class="img_flex" src="img/The Wolf.jpg" alt="The Wolf">
                             <ul class="ul_flex">
-                                <li class="menu_li_flex">Hendrick’s Grand Cabaret</li>
+                                <li class="menu_li_flex">Hendrick's Grand Cabaret</li>
                                 <li class="menu_li_flex">Campari</li>
                                 <li class="menu_li_flex">Vermut</li>
                             </ul>
