--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,15 @@
 <html lang="hu">
 
 <head>
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GXGPELXXB"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4GXGPELXXB');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
@@ -9,7 +18,8 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  rel="stylesheet">
-    <title>Tasty Burger</title>
+    <meta name="description" content="Nézd meg éttermünk büszkeségeit a galériában. Ha tetszik a látvány és kedvet kaptál egy burgerre, akár egy koktélra ne habozz! Foglalj asztalt még ma nálunk!">
+    <title>Galéria - Büszkeségeink - TastyBurger.hu</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -32,11 +42,11 @@
         </div>
     </nav>
         <header>
-            <h1>“This is a tasty burger.” – Jules Winnfield</h1>
+            <h1>“This is a tasty burger.” - Jules Winnfield</h1>
         </header>
         <main>
             <div class="gallery_flex">
-            <img src="img/img_gallery.jpg" alt="Kicsi kép 1" class="image">
+            <img src="img/img_gallery1.jpg" alt="Kicsi kép 1" class="image">
             <img src="img/img_gallery2.jpg" alt="Kicsi kép 1" class="image">
             <img src="img/img_gallery3.jpg" alt="Kicsi kép 1" class="image">
             <img src="img/img_gallery4.jpg" alt="Kicsi kép 1" class="image">
@@ -51,6 +61,7 @@
                 <span id="close">&times;</span>
                 <img id="fullImage">
             </div>
+            <h2>Tetszett, amit láttál? Vedd fel velünk a kapcsolatot! A történet veled folytatódik: <a href="contact.html">Itt!</a></h2> 
         </main>
         <footer><p>© 2025 Tasty Burger. Minden jog fenntartva.</p></footer>
     </div>
