--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="hu">
   <head>
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GXGPELXXB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-4GXGPELXXB');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link  href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet"  />
     <link  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  rel="stylesheet"  />
-    <title>Tasty Burger</title>
+    <meta name="description" content="Házilag készült hamburgerekkel és koktélokkal várunk minden nap Budapest legegyedibb burgerezőjében! Gyere el még ma! Rendelj, harapj bele, érezd a különbséget!">
+    <title>Kézműves burgerező és koktélbár Budapesten - TastyBurger.hu</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -28,7 +38,7 @@
       </div>
     </nav>
       <header>
-        <h1>“This is a tasty burger.” – Jules Winnfield</h1>
+        <h1>“This is a tasty burger.” - Jules Winnfield</h1>
       </header>
       <div class="flex-container">
       <main>
@@ -36,11 +46,11 @@
         <div class="items">
           <img class="burgerek_img" src="img/tasty_burger.jpg" alt="tasty burger"/>
           <p class="flex_text">  
-            Nálunk a hamburgerek nem csak kaják – karakterek. Ez nem egy
+            Nálunk a hamburgerek nem csak kaják - karakterek. Ez nem egy
             szokványos gyorsétterem. Ez egy neo-noir burger-univerzum, egy
             szelet mozi, egy harapásnyi Tarantino. Itt minden falat egy idézet,
             minden íz egy jelenet. A menü nem csak étel, hanem tisztelgés a
-            kultfilm mesterműve előtt: a “Jules’ Fury” burgerben ott a harag, az
+            kultfilm mesterműve előtt: a “Jules' Fury” burgerben ott a harag, az
             “$5 Milkshake”-ben a stílus, a “Briefcase Surprise”-ban pedig…
             valami, ami ragyog.
           </p>
@@ -55,7 +65,7 @@
           </p>
           <img class="burgerek_img" src="img/shake.jpg" alt="shake" />
           </div>
-          <h2>Tasty Burger – a sztorink</h2>
+          <h2>Tasty Burger - a sztorink</h2>
           <div class="items">
           <p class="flex_text">
             Nem egy újabb burgeres vagyunk. Egy jelenet vagyunk a kedvenc
@@ -65,18 +75,18 @@
             sztorink valahol ott kezdődött, amikor egy átlagos nap végén
             feltettük magunknak a kérdést: „Mi lenne, ha a világ legmenőbb
             burgerét nem csak jól készítenénk el, hanem stílussal?” És akkor
-            megszületett a Tasty Burger – egy olyan hely, ahol a burger annyira
+            megszületett a Tasty Burger - egy olyan hely, ahol a burger annyira
             jó, hogy idézőjelbe tennéd.
           </p>
-          <img  class="burgerek_img"  src="img/hogy_mi1.jpg" alt="Brett"/>
+          <img  class="burgerek_img"  src="img/hogy_mi.jpg" alt="Brett"/>
           </div>
-          <h2 class="cim_h2">mi vezérel minket?</h2>
+          <h2 class="cim_h2">hogy mi vezérel minket?</h2>
           <div class="items">
           <p class="flex_text">
             Minőség, karakterrel: Nálunk nincsen sablon. Minden burger, shake és
             desszert egyedi recept, pont úgy, ahogy egy Tarantino karakter is
             sosem sablonos. Filmrajongóknak, kajamániásoknak: Ha egyszer ettél
-            nálunk, nem csak jóllaksz – elviszel egy jelenetet magaddal. Stílus
+            nálunk, nem csak jóllaksz - elviszel egy jelenetet magaddal. Stílus
             és szemtelenség: Mert a világ tele van unalmas gyorsételekkel. Mi
             nem kérünk belőle. És te sem fogsz elégedetlenül távozni.
           </p>
