--- a/menu.html
+++ b/menu.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GXGPELXXB"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4GXGPELXXB');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  rel="stylesheet">
-    <title>Tasty Burger</title>
+    <meta name="description" content="Kézműves hamburgereink garantáltan elvarázsolják ízlelőbimbóit! Friss, helyi alapanyagokból készült, egyedi ízek minden falatban. Próbálja ki most!">
+    <title>Ízletes és szaftos kézműves hamburgerek - TastyBurger.hu</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -81,10 +91,10 @@
                 <h2>Válassz kínálatunkból:</h2>
                 <div class="container">
                         <div class="flex-item">
-                            <h3 class="flex_h3">Jules’ Fury</h3>
-                            <h4 class="hambi_nev">Dupla marhahús, jalapeño, chiliszósz – forró, tüzes, igazán badass.</h4>
+                            <h3 class="flex_h3">Jules' Fury</h3>
+                            <h4 class="hambi_nev">Dupla marhahús, jalapeño, chiliszósz - forró, tüzes, igazán badass.</h4>
                             <div class="box">
-                            <img class="img_flex" src="img/Jules’ Fury2.jpg" alt="Fury">
+                            <img class="img_flex" src="img/Jules’ Fury.jpg" alt="Fury">
                                 <ul class="ul_flex">
                                     <li class="menu_li_flex">Dupla marhahúspogácsa</li>
                                     <li class="menu_li_flex">Jalapeño szeletek</li>
@@ -103,7 +113,7 @@
                             <h4 class="hambi_nev"> Retro cheeseburger olvadt sajttal, klasszikus ízvilág, mellé kötelező
                                 a shake.</h4>
                             <div class="box">
-                            <img class="img_flex" src="img/Mia’s Classic2.jpg" alt="Mia’s">
+                            <img class="img_flex" src="img/Mia’s Classic.jpg" alt="Mia's burger">
                                 <ul class="ul_flex">
                                     <li class="menu_li_flex">Marhahúspogácsa</li>
                                     <li class="menu_li_flex">Cheddar sajt</li>
@@ -119,7 +129,7 @@
                         </div>
                         <div class="flex-item"> 
                             <h3 class="flex_h3">Vincent Veggie</h3>
-                            <h4 class="hambi_nev">Vegaburger cool stílusban – zöldség, de Tarantino-karizmával.</h4>
+                            <h4 class="hambi_nev">Vegaburger cool stílusban - zöldség, de Tarantino-karizmával.</h4>
                             <div class="box">    
                             <img class="img_flex" src="img/Vincent Veggie.jpeg" alt="Veggie">
                                 <ul class="ul_flex">
@@ -137,9 +147,9 @@
                         </div>
                         <div class="flex-item"> 
                             <h3 class="flex_h3">Big Kahuna 2.0</h3>
-                            <h4 class="hambi_nev">Marhahús, ananász, újragondolt hawaii vibe – igazi klasszikus.</h4>
+                            <h4 class="hambi_nev">Marhahús, ananász, újragondolt hawaii vibe - igazi klasszikus.</h4>
                                 <div class="box">
-                                <img class="img_flex" src="img/Big Kahuna 2.0.2.jpg" alt="Big Kahuna">
+                                <img class="img_flex" src="img/Big Kahuna 2.0.jpg" alt="Big Kahuna">
                                 <ul class="ul_flex">
                                     <li class="menu_li_flex">Marhahúspogácsa</li>
                                     <li class="menu_li_flex">Grillezett ananász</li>
@@ -155,10 +165,10 @@
                         </div>
                         <div class="flex-item"> 
                             <h3 class="flex_h3">Marcellus Meal</h3>
-                            <h4 class="hambi_nev">Masszív húspogácsa, szaftos feltétek – nagy, komoly, nem alkuszol
+                            <h4 class="hambi_nev">Masszív húspogácsa, szaftos feltétek - nagy, komoly, nem alkuszol
                                 vele.</h4>
                                 <div class="box">
-                                <img class="img_flex" src="img/Marcellus Meal2.jpg" alt="Marcellus">
+                                <img class="img_flex" src="img/Marcellus Meal.jpg" alt="Marcellus">
                                 <ul class="ul_flex">
                                     <li class="menu_li_flex">Tripla marhahúspogácsa</li>
                                     <li class="menu_li_flex">Dupla cheddar sajt</li>
@@ -174,9 +184,9 @@
                         </div>
                         <div class="flex-item"> 
                             <h3 class="flex_h3">Pumpkin & Honey Bunny</h3>
-                            <h4 class="hambi_nev">Két burger, egy szerelem – páros menü édes-sós romantikával.</h4>
+                            <h4 class="hambi_nev">Két burger, egy szerelem - páros menü édes-sós romantikával.</h4>
                             <div class="box">    
-                            <img class="img_flex" src="img/Pumpkin & Honey Bunny2.jpg" alt="Pumpkin">
+                            <img class="img_flex" src="img/Pumpkin & Honey Bunny.jpg" alt="Pumpkin">
                                 <ul class="ul_flex">
                                     <li class="menu_li_flex">Marhahúspogácsa</li>
                                     <li class="menu_li_flex">Grillezett paradicsom</li>
