--- a/drinks.html
+++ b/drinks.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bangers&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  rel="stylesheet">
     <meta name="description" content="Fedezd fel koktéljainkat! Egyedi ízek, vagány mixek színesítik a feelinget, amelyek garantáltan feldobják a hangulatod is. Kóstolj bele a legjobbakba!">
     <title>A város legjobb koktéljai - Különleges mixeink - TastyBurger.hu</title>
@@ -131,7 +132,7 @@
                             <div class="box">
                             <img class="img_flex" src="img/Big Kahuna Break.jpg" alt="Big Kahuna Shake">
                             <ul class="ul_flex">
-                                <li class="menu_li_flex">Monkey Shoulder whiskey</li>
+                                <li class="menu_li_flex">Whiskey</li>
                                 <li class="menu_li_flex">Pandan szirup</li>
                                 <li class="menu_li_flex">Kókusz szirup</li>
                                 <li class="menu_li_flex">Ananászlé</li>
