--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bangers&display=swap" rel="stylesheet" />
     <meta name="description" content="Nézd meg éttermünk büszkeségeit a galériában. Ha tetszik a látvány és kedvet kaptál egy burgerre, akár egy koktélra ne habozz! Foglalj asztalt még ma nálunk!">
     <title>Galéria - Büszkeségeink - TastyBurger.hu</title>
     <link rel="stylesheet" href="css/style.css">
@@ -42,7 +43,7 @@
         </div>
     </nav>
         <header>
-            <h1>“This is a tasty burger.” - Jules Winnfield</h1>
+            <h1>“Hamburgerek: minden tápláló reggeli sarokköve.” - Jules Winnfield</h1>
         </header>
         <main>
             <div class="gallery_flex">
