--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link  href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet"  />
     <link  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  rel="stylesheet"  />
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bangers&display=swap" rel="stylesheet" />
     <meta name="description" content="Házilag készült hamburgerekkel és koktélokkal várunk minden nap Budapest legegyedibb burgerezőjében! Gyere el még ma! Rendelj, harapj bele, érezd a különbséget!">
     <title>Kézműves burgerező és koktélbár Budapesten - TastyBurger.hu</title>
     <link rel="stylesheet" href="css/style.css" />
@@ -46,13 +47,11 @@
         <div class="items">
           <img class="burgerek_img" src="img/tasty_burger.jpg" alt="tasty burger"/>
           <p class="flex_text">  
-            Nálunk a hamburgerek nem csak kaják - karakterek. Ez nem egy
+            Nálunk a hamburgerek nem csak kaják - karakterek is. Éttermünk nem egy
             szokványos gyorsétterem. Ez egy neo-noir burger-univerzum, egy
             szelet mozi, egy harapásnyi Tarantino. Itt minden falat egy idézet,
             minden íz egy jelenet. A menü nem csak étel, hanem tisztelgés a
-            kultfilm mesterműve előtt: a “Jules' Fury” burgerben ott a harag, az
-            “$5 Milkshake”-ben a stílus, a “Briefcase Surprise”-ban pedig…
-            valami, ami ragyog.
+            kultfilm előtt.
           </p>
         </div>
         <div class="items">
@@ -60,21 +59,21 @@
             Az enteriőr? VHS retró, neonfény és vérbeli noir hangulat. A zene? Pont
             az, amitől Mia Wallace elkezdene táncolni. A kiszolgálás? Gyors,
             határozott, mint Mr. Wolf. Nem érdekel a sablonburger? Jó. Minket
-            se. A Tasty Burger azoknak szól, akik szeretik az erős ízeket, az
-            ikonikus pillanatokat, és nem félnek idézőjelesen enni.
+            sem. A Tasty Burger azoknak szól, akik szeretik az erős ízeket, az
+            ikonikus pillanatokat, és nem félnek idézőjelesen enni és inni.
           </p>
           <img class="burgerek_img" src="img/shake.jpg" alt="shake" />
           </div>
           <h2>Tasty Burger - a sztorink</h2>
           <div class="items">
           <p class="flex_text">
-            Nem egy újabb burgeres vagyunk. Egy jelenet vagyunk a kedvenc
-            filmedből. A Tasty Burger nem csak egy hely, ahol hamburgert kapsz.
-            Ez egy életérzés, egy mozi-univerzum, ahol a grillsütő mögött
+            Nem csak egy újabb burgeres vagyunk. Egy jelenet vagyunk a kedvenc
+            filmünkből. A Tasty Burger nem csak egy hely, ahol hamburgert kapsz.
+            Ez egy életérzés, egy mozi-univerzum, ahol a sütő mögött
             Tarantino szelleme lebeg, és ahol minden falat egy kultidézet. A
             sztorink valahol ott kezdődött, amikor egy átlagos nap végén
             feltettük magunknak a kérdést: „Mi lenne, ha a világ legmenőbb
-            burgerét nem csak jól készítenénk el, hanem stílussal?” És akkor
+            burgerét nem csak jól készítenénk el, hanem stílussal ötvöznénk?” És akkor
             megszületett a Tasty Burger - egy olyan hely, ahol a burger annyira
             jó, hogy idézőjelbe tennéd.
           </p>
@@ -86,7 +85,7 @@
             Minőség, karakterrel: Nálunk nincsen sablon. Minden burger, shake és
             desszert egyedi recept, pont úgy, ahogy egy Tarantino karakter is
             sosem sablonos. Filmrajongóknak, kajamániásoknak: Ha egyszer ettél
-            nálunk, nem csak jóllaksz - elviszel egy jelenetet magaddal. Stílus
+            nálunk, nem csak jóllaksz, hanem elviszel egy jelenetet magaddal. Stílus
             és szemtelenség: Mert a világ tele van unalmas gyorsételekkel. Mi
             nem kérünk belőle. És te sem fogsz elégedetlenül távozni.
           </p>
@@ -96,17 +95,17 @@
           <div class="items">
           <p class="flex_text">
             Hogy miért a ponyvaregény? mert az a film, ahol egy burger
-            filmtörténelmi jelentőségű lett. és mi szeretnénk, ha nálunk minden
-            burger legalább olyan emlékezetes lenne, mint jules monológja.
+            filmtörténelmi jelentőségű lett. És mi szeretnénk, ha nálunk minden
+            burger és koktél legalább olyan emlékezetes lenne, mint Jules monológja.
           </p>
           <img class="burgerek_img" src="img/burger3.jpg" alt="hamburger" />
           </div>
           <h2 class="cim_h2">rólad is szól</h2>
           <div class="items">
           <p class="flex_text">
-            a Tasty Burger nem csak rólunk szól. ez rólad is szól, ha: szereted
+            A Tasty Burger nem csak rólunk szól. ez rólad is szól, ha: szereted
             az egyedi helyeket, kajában is keresed a sztorit, tudod, mi az a
-            „royale with cheese”, vagy csak egyszerűen… szeretsz jókat enni,
+            „royale with cheese”, vagy csak egyszerűen szeretsz jókat enni, méghozzá
             stílusosan.
           </p>
           <img class="burgerek_img" src="img/burger4.jpg" alt="hamburger" />
