--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bangers&display=swap" rel="stylesheet" />
     <meta name="description" content="Kézműves hamburgereink garantáltan elvarázsolják ízlelőbimbóit! Friss, helyi alapanyagokból készült, egyedi ízek minden falatban. Próbálja ki most!">
     <title>Ízletes és szaftos kézműves hamburgerek - TastyBurger.hu</title>
     <link rel="stylesheet" href="css/style.css">
@@ -103,7 +104,7 @@
                                     <li class="menu_li_flex">Piros hagyma</li>
                                     <li class="menu_li_flex">Chipotle majonéz</li>
                                     <li class="menu_li_flex">Jégsaláta</li>
-                                    <li class="menu_li_flex">Pirított briós buciban</li>
+                                    <li class="menu_li_flex">Pirított buci</li>
                                 </ul>
                                 <div class="price_list"><p>4.200 Ft</p></div>
                         </div>
@@ -154,7 +155,7 @@
                                     <li class="menu_li_flex">Marhahúspogácsa</li>
                                     <li class="menu_li_flex">Grillezett ananász</li>
                                     <li class="menu_li_flex">Teriyaki szósz</li>
-                                    <li class="menu_li_flex">sült bacon</li>
+                                    <li class="menu_li_flex">Sült bacon</li>
                                     <li class="menu_li_flex">Cheddar sajt</li>
                                     <li class="menu_li_flex">Jégsaláta</li>
                                     <li class="menu_li_flex">Lila hagyma</li>
