--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bangers&display=swap" rel="stylesheet" />
     <meta name="description" content="Foglalj asztalt telefonon, vagy akár online pár kattintással a TastyBurgerbe! Gyere és kóstold meg a város legjobb burgereit. Ne maradj le, foglalj most!">
     <title>Kapcsolatfelvétel és rendelés - TastyBurger.hu</title>
     <link rel="stylesheet" href="css/style.css">
@@ -42,7 +43,7 @@
         </div>
     </nav>
         <header>
-            <h1>Mindenhol jó, de legjobb nálunk</h1>
+            <h1>Mindenhol jó, de a legjobb nálunk</h1>
         </header>
         <main>
             
